--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "base-auth-api",
   "version": "0.0.1",
   "description": "",
-  "author": "maksym.fedenko",
+  "author": "",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
